# aif-face-analysis

./: .env.template  .gitignore  Dockerfile  README.md  build.sh  collected_face_data.csv  face_data_collector_and_analyzer.py  face_recognition_app.py  mainGUI.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
kubernetes/: app-secret.yaml  deployment.yaml  ghcr-secret.yaml  ingress.yaml  service.yaml  ws-middleware.yaml
resources/: index.html
src/: main.py  server.py
src/logic/: face_analysis.py
src/ui/: mainGUI.py
src/utils/: draw.py
