[tool.poetry]
name = "face-recogai"
version = "0.1.0"
description = ""
authors = ["Mateusz Cieśla <mateusz.ciesla@besidethepark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
tensorflow = "^2.19.0"
pillow = "^11.2.1"
deepface = "^0.0.93"
tf-keras = "^2.19.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
websockets = "^15.0.1"
python-multipart = "^0.0.20"
matplotlib = "^3.10.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
